hphp/hack/test/typecheck/array/safe_vector_array/disallow_varray_or_darray_where_dict_like_array_is_required.php
<?hh // strict

function consumeArrayOfArraykeyToInt(array<arraykey, int> $arg): void {}

function provideDarrayOrVarrayOfInt(): varray_or_darray<int> {
  return darray["a" => 0];
}

function test(): void {
  consumeArrayOfArraykeyToInt(provideDarrayOrVarrayOfInt());
}
